# my-project

./: README.md  pyproject_root.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/src/eda_cli/: __init__.py
src/eda_cli/: cli.py  core.py  viz.py
tests/: test_core.py
